# yt-dlp-tui

./: .gitignore  .pre-commit-config.yaml  FUTURE_FEATURES.md  README.md  pyproject.toml  requirements.txt
tests/: test_config.py
yt-dlp-tui/: README.md  pyproject.toml
yt-dlp-tui/src/yt_dlp_tui/: __init__.py  config.py  main.py
