[project]
name = "yt-dlp-tui"
version = "0.1.0"
description = "A TUI wrapper for yt-dlp with config management"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "textual>=0.50.0",
    "platformdirs>=4.0.0",
    "toml>=0.10.0",
    "plyer>=2.1.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
yt-dlp-tui = "yt_dlp_tui.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.textual]
